# ChangeLog for dev-perl/HTML-TableExtract
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/HTML-TableExtract/ChangeLog,v 1.28 2006/07/04 10:17:46 ian Exp $

  04 Jul 2006; Christian Hartmann <ian@gentoo.org>
  HTML-TableExtract-2.06.ebuild, HTML-TableExtract-2.08.ebuild,
  HTML-TableExtract-2.09.ebuild:
  Fixed RDEPEND wrt bug #134781

*HTML-TableExtract-2.09 (23 Jun 2006)

  23 Jun 2006; Michael Cummings <mcummings@gentoo.org>
  +HTML-TableExtract-2.09.ebuild:
  Version bump upstream

*HTML-TableExtract-2.08 (16 May 2006)

  16 May 2006; Christian Hartmann <ian@gentoo.org>
  -HTML-TableExtract-2.07.ebuild, +HTML-TableExtract-2.08.ebuild:
  Version bump

*HTML-TableExtract-2.07 (26 Apr 2006)

  26 Apr 2006; <mcumming@gentoo.org> +HTML-TableExtract-2.07.ebuild:
  Version bump

  10 Mar 2006; Aron Griffis <agriffis@gentoo.org>
  HTML-TableExtract-2.06.ebuild:
  Mark 2.06 stable on ia64

  06 Feb 2006; Simon Stelling <blubb@gentoo.org>
  HTML-TableExtract-2.06.ebuild:
  stable on amd64

  31 Jan 2006; Aron Griffis <agriffis@gentoo.org>
  HTML-TableExtract-2.06.ebuild:
  Mark 2.06 stable on alpha

  27 Jan 2006; Michael Hanselmann <hansmi@gentoo.org>
  HTML-TableExtract-2.06.ebuild:
  Stable on ppc.

  21 Jan 2006; Markus Rothe <corsair@gentoo.org>
  HTML-TableExtract-2.06.ebuild:
  Stable on ppc64

  13 Jan 2006; Michael Cummings <mcummings@gentoo.org>
  HTML-TableExtract-2.06.ebuild:
  Marking stable sparc x86

  02 Dec 2005; Fernando J. Pereda <ferdy@gentoo.org>
  HTML-TableExtract-2.06.ebuild:
  re-add ~alpha wrt bug #113358

  02 Dec 2005; Joseph Jezak <josejx@gentoo.org>
  HTML-TableExtract-2.06.ebuild:
  Marked ~ppc for bug #113358.

  28 Nov 2005; Luis Medinas <metalgod@gentoo.org>
  HTML-TableExtract-2.06.ebuild:
  Re-added ~amd64 keyword. See bug #113358.

  27 Nov 2005; Tom Gall <tgall@gentoo.org> HTML-TableExtract-1.10.ebuild:
  stable on ppc64
