@@ -1,8 +1,12 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST HTML-TableExtract-1.08.tar.gz 23943
 DIST HTML-TableExtract-1.10.tar.gz 27031
 DIST HTML-TableExtract-2.06.tar.gz 23509 RMD160 0dbfaf4df8ee13e0be3350006315e85ef8a02707 SHA1 d95db978f19715d06816b1f26fd68f940cfc61af SHA256 566d6455438cac090420f383f4243e2d2618e24e6e172c74d6f0676cb7803ba9
 DIST HTML-TableExtract-2.08.tar.gz 26035 RMD160 7058d28f3c40b0255f8f37219d3675df6d5fe537 SHA1 9e839d1855119bfb1fe27aa0559185e79a4202ef SHA256 534bac2bd28efa5bf3d9cc586a3a7cf501b3ba8dd4a6072ab5744cb2c3240930
 DIST HTML-TableExtract-2.09.tar.gz 26606 RMD160 cb67061aabb3ad961a37c10ee91334312b8f8d15 SHA1 313dd4736041768cb591b6364be3e3995b8b7717 SHA256 fbbb3574b19a2558c2a88280c92b7e5e3910a63133a2dad466592e12a19de2e0
+DIST HTML-TableExtract-2.10.tar.gz 26661 RMD160 c612ac6a1a4f7d3af8c96f6dea8ad3a6a3384b56 SHA1 e979aed41653cc5eda23e170ed400a6073fe235e SHA256 e9bc7bf60a26aacc367d2b0fb9c6464062a7dbbec795ca1fc2d6f99ac8cd4a10
 EBUILD HTML-TableExtract-1.08.ebuild 582 RMD160 28135b637461ae1c134edfea51269ff6f9f09fc6 SHA1 7d273973c97062de70647c13e086e2705f80384e SHA256 55581d2e5269a0d459dae264c50b5f9a3c21cfd92a3dff2fc3bf2d2782a6ec54
 MD5 c5e0d3d4a3d217e9cff2df474b8ac63d HTML-TableExtract-1.08.ebuild 582
 RMD160 28135b637461ae1c134edfea51269ff6f9f09fc6 HTML-TableExtract-1.08.ebuild 582
@@ -23,10 +27,14 @@ EBUILD HTML-TableExtract-2.09.ebuild 637 RMD160 695e8e8b3f8052dc656a2b172b2fff82
 MD5 28ba8b1bb8d3c46d581ee9e6f360c304 HTML-TableExtract-2.09.ebuild 637
 RMD160 695e8e8b3f8052dc656a2b172b2fff8241be4dfd HTML-TableExtract-2.09.ebuild 637
 SHA256 91d91897e92f447d7b5829ae82c2169f19298cf38c05a397f9e35a64e7f69641 HTML-TableExtract-2.09.ebuild 637
-MISC ChangeLog 3250 RMD160 106b38a5883897af50ecd6744c8aa45a77dc30d8 SHA1 0b9362f901f3fe5eda787919aec82d853e41f4f9 SHA256 676c4c146026a6751902557bb0cb3ac6169401a2bcc27b13f06eb7db3fec7c6e
-MD5 c4d9647510f1decafdbd1557fedc18ee ChangeLog 3250
-RMD160 106b38a5883897af50ecd6744c8aa45a77dc30d8 ChangeLog 3250
-SHA256 676c4c146026a6751902557bb0cb3ac6169401a2bcc27b13f06eb7db3fec7c6e ChangeLog 3250
+EBUILD HTML-TableExtract-2.10.ebuild 643 RMD160 46eeed3e55b592d81efbb87daef86c6b75f48a52 SHA1 49abd164d4750012a115b67a237faac02911d48e SHA256 9fec82f38fba5480a22f37bdb787530a58e75149d847e3000351c3d90cb29669
+MD5 515818a1c73d1dc1c70bc810226d751b HTML-TableExtract-2.10.ebuild 643
+RMD160 46eeed3e55b592d81efbb87daef86c6b75f48a52 HTML-TableExtract-2.10.ebuild 643
+SHA256 9fec82f38fba5480a22f37bdb787530a58e75149d847e3000351c3d90cb29669 HTML-TableExtract-2.10.ebuild 643
+MISC ChangeLog 3400 RMD160 844185511d0f84a8e288b77c858a0f05d3e7dfb4 SHA1 1b303ef119747442d5c6a08df6a3ae69916a22c0 SHA256 54b9989becf17c2fa743f1a7cb01cdff7e2470c3520b9fa3a96ffc779eb978a5
+MD5 fcedb6a03d61b5cc72489d60e58e397b ChangeLog 3400
+RMD160 844185511d0f84a8e288b77c858a0f05d3e7dfb4 ChangeLog 3400
+SHA256 54b9989becf17c2fa743f1a7cb01cdff7e2470c3520b9fa3a96ffc779eb978a5 ChangeLog 3400
 MISC metadata.xml 305 RMD160 647980838c590f54441a053916ea629e53e551c0 SHA1 99ef1deeae9a934fb6e46cf5fc4a5fcb8379a74a SHA256 f05dbef15061919972882cab07057e102760a542beba17d131194091401cd7ca
 MD5 e2d8f1bf77722def1dd432e26455c818 metadata.xml 305
 RMD160 647980838c590f54441a053916ea629e53e551c0 metadata.xml 305
@@ -46,3 +54,13 @@ SHA256 963b6a381835f51dcc29a8f5ea6841b68b4ba87c595d945fe0e2b85c4b8639c8 files/di
 MD5 0a3d74ba0a3e427b5d712a3c57815d65 files/digest-HTML-TableExtract-2.09 265
 RMD160 1aa42b87240ed4b37dade68faf953e0ba8f5db67 files/digest-HTML-TableExtract-2.09 265
 SHA256 f67329bc1e7043e8f2a67f60f62c3530a609eb4847afb77b90282d87e173634d files/digest-HTML-TableExtract-2.09 265
+MD5 9e22de4c8aa3963ff319a9643ed08ee6 files/digest-HTML-TableExtract-2.10 265
+RMD160 18a1d40680fa6851db7dee9d5188dd5947f4563a files/digest-HTML-TableExtract-2.10 265
+SHA256 a6addc3b1b7e8c4b63e06b9623039a48e04ad80aea6e835f777a9995e1c7eeb8 files/digest-HTML-TableExtract-2.10 265
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v1.4.4 (GNU/Linux)
+
+iD8DBQFEwZGytG5z4I8BtQoRAnu1AJ4pkxjxGHaFKGnUZoJ14SnPJL9/nACeJIji
+5E9MwCB/s5QqSDXxbx6CfLU=
+=Ycqm
+-----END PGP SIGNATURE-----
