@@ -1,0 +1,3 @@
+MD5 e6e355f6049dc57706e719c5ce61ff39 HTML-TableExtract-2.10.tar.gz 26661
+RMD160 c612ac6a1a4f7d3af8c96f6dea8ad3a6a3384b56 HTML-TableExtract-2.10.tar.gz 26661
+SHA256 e9bc7bf60a26aacc367d2b0fb9c6464062a7dbbec795ca1fc2d6f99ac8cd4a10 HTML-TableExtract-2.10.tar.gz 26661
