@@ -1,6 +1,12 @@
 # ChangeLog for dev-perl/HTML-TableExtract
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/HTML-TableExtract/ChangeLog,v 1.28 2006/07/04 10:17:46 ian Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/HTML-TableExtract/ChangeLog,v 1.29 2006/07/22 02:46:51 mcummings Exp $
+
+*HTML-TableExtract-2.10 (22 Jul 2006)
+
+  22 Jul 2006; Michael Cummings <mcummings@gentoo.org>
+  +HTML-TableExtract-2.10.ebuild:
+  Version bump
 
   04 Jul 2006; Christian Hartmann <ian@gentoo.org>
   HTML-TableExtract-2.06.ebuild, HTML-TableExtract-2.08.ebuild,
